[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>, Michał Hanusek <mhanusek@o2.pl>"]
name = "rs485"
version = "0.1.1"
description = "RS485 serial support (Linux)"
license = "MIT"
repository = "https://github.com/mbr/rs485-rs"
documentation = "https://docs.rs/rs485"
edition = "2018"

[dependencies]
libc = "0.2.24"

[[example]]
name = "echo"
crate-type = ["bin"]

[dev-dependencies]
serialport = "3.3.0"
hex-slice = "0.1.4"
